--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,5 +1,5 @@
 - create documentation x
-- add public key parameter to encrypt function
+- add public key parameter to encrypt function x
 - prisma db push on server start
 - fido compliance
 - only one device per user
