--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,15 +1,5 @@
-- create documentation x
-- add public key parameter to encrypt function x
-- prisma db push on server start x
 - fido compliance
-- only one device per user x
------------------------------------------------ Release
+- improve tests
+- improve backend redis
+- onboard workflow
 - discoverable credentials / conditional ui
-- types for wembat actions correction x
-- improve error handling x
-- console logs überarbeiten x
-- tests schreiben
-- api class structure
-- create error defines
-- encapsulate helper functions
-- function and variables visibility private/public x
