--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,7 +4,8 @@
 - token handling x
 - improve installation workflow x
 - improve documentation
-- refresh token workflow
+- refresh token workflow x
+- logout workflow
 - application rest interface
 -- release
 - fido compliance
