update todo and create new install files

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,6 +3,8 @@
 - logout workflow
 - application cors dynamically
 - validation issuer with env variable
+- make install process easy
+- update documentation
 -- release
 - fido compliance
 - improve tests
